# pythonplot

./: app-window.slint  main.py  pyproject.toml
