[project]
name = "pythonplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "slint>=1.14.0b1",
]

[tool.uv.sources]
slint = { git = "https://github.com/slint-ui/slint", subdirectory = "api/python/slint" }

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
